--- a/templates/vinyl/browse.html.twig
+++ b/templates/vinyl/browse.html.twig
@@ -23,7 +23,7 @@
 			<div class="row">
 				{% for mix in mixes %}
 					<div class="col col-md-4">
-						<div class="mixed-vinyl-container p-3 text-center">
+						<a href="{{ path('app_mix_show', { id: mix.id }) }}" class="mixed-vinyl-container p-3 text-center">
 							<img src="{{ mix.getImageUrl(300) }}" alt="Mix album cover">
 							<p class="mt-2">
 								<strong>{{ mix.title }}</strong>
@@ -37,7 +37,7 @@
 							<br>
 							{{ mix.votesString }}
 							votes
-						</div>
+						</a>
 					</div>
 				{% endfor %}
 			</div>
