Simple Doctrine Data Fixtures

--- a/templates/vinyl/browse.html.twig
+++ b/templates/vinyl/browse.html.twig
@@ -33,7 +33,7 @@
 							|
 							<span>{{ mix.genre }}</span>
 							|
-							<span>{{ mix.createdAt|ago }}</span>
+							<span>{{ mix.createdAt}}</span>
 							<br>
 							{{ mix.votesString }}
 							votes
