--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,6 +39,9 @@
 							<li class="nav-item">
 								<a class="nav-link" style="margin-top: 20px;" href="{{ path('app_browse') }}">Browse Mixes</a>
 							</li>
+							<li class="nav-item">
+								<a class="nav-link" style="margin-top: 20px;" href="{{ path('app_contact') }}">Contact</a>
+							</li>
 							<!-- Not Authenticated -->
 							<!-- <li class="nav-item"><button href="#" class="btn btn-primary btn-sm">Login</button></li> -->
 							<!-- End Not Authenticated -->
